[project]
name = "hpf"
version = "0.3.14.0"
authors = [
    {name = "Chenyun Z.", email = "zcy@hi-zcy.com"},
]
description = "A high precision floating-point arithmetic module"
readme = "README.md"
requires-python = ">=3.0"
keywords = ["math"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []
# dynamic = ["version"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
